# sb-watchbot

./: .env.example  .gitignore  README.md  fix_intraminute.patch  ohlcv_NQZ5_20250930.csv  onbar.patch  pyproject.toml  replay_day_debug.csv  requirements.txt  run_live.py  run_live.py.bak  run_live.py.bak.1762733445  run_live.py.bak.1762734379  run_preflight.py  run_replay.sh  sb-test-notify.py  sb_bot.py  sb_bot.py.bak.2025-10-20-202557  sb_bot.py.bak.2025-10-23-154234  sb_bot.py.bak.2025-10-23-154916  sb_bot.py.pre-docfix.1761177518  sb_bot.py.pre-fix.2025-10-20-201534  sb_bot.py.pre-fix.20251021-185841  sb_bot.py.pre-live-clean.1761177775  sb_bot.py.pre-live-order.1761177240  sb_bot.py.pre-live-patch.1761177103  sb_live_stream.py  test_contracts.py  test_db_pull.py  test_intraminute_return.py  test_intraminute_return_debug.py  test_strategy_run.py  test_strategy_smoke.py
backups/: build_levels.py.bak  capture_levels.py.2025-09-13_010300  capture_levels.py.2025-09-13_014128  capture_levels.py.2025-09-13_014224  capture_levels.py.2025-09-13_014923  capture_levels.py.2025-09-13_015112  capture_levels.py.2025-09-13_015245  capture_levels.py.2025-09-13_015347  capture_levels.py.2025-09-13_015651  capture_levels.py.2025-09-13_015921  live-20251004-005113.tgz  replay_core.py.2025-09-13_013119  replay_day.py.2025-09-13_010300  replay_day.py.bak  replay_prod.py.2025-09-13_012444
configs/: logging.yaml  settings.yaml
data/: levels.json.bak  levels.json.bak.2025-10-23-162254  levels.json.bak.2025-10-23-162432  levels.json.bak.2025-10-23-162504  live_minute.csv  live_probe.csv  (+2 more)
(+192 files in other folders)
