[project]
name = "sbwatch"
version = "0.1.0"
description = "AI-based trading strategy alert system (ICT Silver Bullet-style)."
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "typer>=0.12",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  # add your vendor libs here (uncomment if used)
  # "databento>=0.39",
]

[project.scripts]
sbwatch = "sbwatch.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
